# prisma-decrypt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: prisma-decrypt.rb
src/: encoding.rs  main.rs
