[package]
name = "prisma-decrypt"
version = "0.1.1"
edition = "2024"
description = "CLI tool for super fast prisma-field-encryption column decryption (clock decryption)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sagefarrenholz/prisma-decrypt"
readme = "README.md"
exclude = ["dist/", "Formula/", ".github/"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
hex = { version = "0.4.3" }
